[tool.poetry]
name = "iacec-project-model-performance-analysis"
version = "0.1.0"
description = ""
authors = ["José Evans <jpjoao24@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
xgboost = "^2.1.3"
tqdm = "^4.67.1"
ipywidgets = "^8.1.5"
jupyter = "^1.1.1"
openml = "^0.15.0"
xmltodict = "^0.14.2"
numpy = "^1.9"
imblearn = "^0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
